# atelier-webdocs

./: .dockerignore  .editorconfig  .gitignore  .pymarkdown.json  .python-version  404.html  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  Makefile  Manual webdocs-v0.1.0-beta.md  README.md  SECURITY.md  implementation-plan-webdocs-v0.0.1-beta-2.md  index.html  mkdocs.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  webdocs-content-beta.md
.github/workflows/: ci.yaml  ci.yml  deploy.yml
contact/get_in_touch/: index.html
docs/: about.md  getting_started.md  index.md
docs/_readme-drafts/: README.md  atelier-agent.md  atelier-connect.md  atelier-data.md  atelier-io.md  atelier-quant.md  atelier-sdk.md  atelier-telemetry.md  atelier-types.md
docs/about/: brand.md
docs/assets/: dark.custom.css  dark_style.css  style.css
docs/backend/: index.md
docs/contact/: get_in_touch.md
docs/datasets/: index.md
docs/getting_started/: installation.md
docs/guides/: 01-bybit-to-parquet.md  02-multi-exchange-sync.md  03-hawkes-on-arrivals.md  index.md
docs/implementation/: platform_specs.md  usage_patterns.md
docs/logs/: logs.md
docs/operations/: agent.md  cutover-runbook.md  index.md
docs/overview/: overview.md
docs/proto/: proto.md
docs/research/: .authors.yml  index.md
docs/sdk/: architecture.md  getting-started.md  index.md
docs/stylesheets/: extra.css  theme.css  tokens.css
overrides/: main.html
scripts/: build.sh  cargo_doc_to_md.py  deploy-version.sh  serve.sh
search/: search_index.json
(+182 files in other folders)
